<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.testingapp.FameFragment"
    >
<LinearLayout
    style="@style/vertical_linear_layout"
    >
    <LinearLayout
        style="@style/vertical_linear_layout"
        android:padding="16dp"
        android:clipToPadding="false"
        >
    <android.support.v7.widget.CardView
        style="@style/fame_card_container_style"
        app:cardElevation="@dimen/cardViewElevation"
        app:cardCornerRadius="@dimen/cardViewRadius"
        android:id="@+id/user_gallery"
        >
        <LinearLayout
            style="@style/vertical_linear_layout"
            >
            <LinearLayout
                style="@style/fame_upper_layout_style"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        style="@style/imageViewStyle"
                        android:src="@drawable/poiana"
                        />
                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/fame_bottom_layout_style"
                android:background="@drawable/gradient_cc_opacity_red_yellow"
                >
                <TextView
                    style="@style/fame_text_style"
                    android:textSize="@dimen/fame_title_size"
                    android:layout_marginTop="@dimen/fame_title_marginTop"
                    android:text="@string/fame_title"
                    android:textAlignment="center"
                    android:fontFamily="@font/roboto_medium"
                    />
                <TextView
                    style="@style/fame_text_style"
                    android:text="@string/fame_subtitle_user"
                    android:textAlignment="center"
                    android:textSize="@dimen/fame_subtitle_size"
                    android:fontFamily="@font/roboto_light"
                    />
                    <LinearLayout
                        style="@style/fame_main_info_layout_style"
                        >
                        <LinearLayout
                            style="@style/fame_info_layouts_style"
                            >
                            <ImageView
                                style="@style/fame_info_icons_style"
                                android:layout_marginLeft="@dimen/fame_info_icons_margins"
                                android:src="@drawable/share"
                                />
                        </LinearLayout>
                        <TextView
                            style="@style/fame_num_photo_text"
                            android:textAlignment="center"
                            android:fontFamily="@font/roboto_medium"
                            />
                        <LinearLayout
                            style="@style/fame_info_layouts_style"
                            android:gravity="end"
                            >
                            <ImageView
                                style="@style/fame_info_icons_style"
                                android:src="@drawable/heart"
                                android:layout_marginRight="@dimen/fame_info_icons_margins"
                                />
                        </LinearLayout>
                    </LinearLayout>

            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                style="@style/fame_image_style"
                android:src="@drawable/rating"
                android:id="@+id/fame"
                />
        </FrameLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/fame_card_container_style"
        app:cardElevation="@dimen/cardViewElevation"
        app:cardCornerRadius="@dimen/cardViewRadius"
        android:layout_marginTop="@dimen/fame_card_margin_top"
        android:id="@+id/dev_gallery"
        >
        <LinearLayout
            style="@style/vertical_linear_layout"
            >
            <LinearLayout
                style="@style/fame_upper_layout_style"
                android:background="@color/cardview_dark_background"
                >
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        style="@style/imageViewStyle"
                        android:src="@drawable/bran"
                        />

                </FrameLayout>
            </LinearLayout>
            <LinearLayout
                style="@style/fame_bottom_layout_style"
                android:background="@drawable/gradient_cc_opacity_pruple_red"
                >
                <TextView
                    style="@style/fame_text_style"
                    android:textSize="@dimen/fame_title_size"
                    android:layout_marginTop="@dimen/fame_title_marginTop"
                    android:text="@string/fame_title"
                    android:textAlignment="center"
                    android:fontFamily="@font/roboto_medium"
                    />
                <TextView
                    style="@style/fame_text_style"
                    android:text="@string/fame_subtitle_devs"
                    android:textAlignment="center"
                    android:textSize="@dimen/fame_subtitle_size"
                    android:fontFamily="@font/roboto_light"
                    />
                <LinearLayout
                    style="@style/fame_main_info_layout_style"
                    >
                    <LinearLayout
                       style="@style/fame_info_layouts_style"
                        >
                        <ImageView
                            style="@style/fame_info_icons_style"
                            android:layout_marginLeft="@dimen/fame_info_icons_margins"
                            android:src="@drawable/share"
                            />
                    </LinearLayout>
                    <TextView
                        style="@style/fame_num_photo_text"
                        android:textAlignment="center"
                        android:fontFamily="@font/roboto_medium"
                        />
                    <LinearLayout
                        style="@style/fame_info_layouts_style"
                        android:gravity="end"
                        >
                        <ImageView
                            style="@style/fame_info_icons_style"
                            android:src="@drawable/heart"
                            android:layout_marginRight="@dimen/fame_info_icons_margins"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                style="@style/fame_image_style"
                android:src="@drawable/rating"
                android:id="@+id/fame2"
                />
        </FrameLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>
</ScrollView>
